[package]
name = "rtab"
version = "0.1.5"
authors = ["Amelia Clarke <me@rsaihe.dev>"]
edition = "2018"
description = "A command-line tool for generating tables from CSV."
repository = "https://github.com/rsaihe/rtab"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33"
csv = "1.1"
